--- a/demo_site/index.html
+++ b/demo_site/index.html
@@ -20,6 +20,10 @@
                 <div class="ad-price">250.000 €</div>
                 <h2 class="ad-title">Apartamento T2 renovado no centro da cidade com varanda</h2>
                 <div class="ad-details">85 m² • 2 quarto • 1 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 1250</span>
+                    <span class="stat-saves">❤️ 45</span>
+                </div>
                 <div class="ad-contact">
                     <span class="seller-name">Imobiliária Confiança</span>
                     <button class="contact-btn">Contactar</button>
@@ -34,6 +38,10 @@
                 <div class="ad-price suspicious-price">45.000 €</div>
                 <h2 class="ad-title">Penthouse de luxo com vista mar T4 oportunidade única</h2>
                 <div class="ad-details">200 m² • 4 quarto • 3 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 5000</span>
+                    <span class="stat-saves">❤️ 2</span> <!-- Muitas views, poucos likes = Suspeito -->
+                </div>
                 <div class="ad-contact">
                     <span class="seller-name">Particular (Urgente)</span>
                     <button class="contact-btn">Contactar</button>
@@ -48,9 +56,33 @@
                 <div class="ad-price">600 €/mês</div>
                 <h2 class="ad-title">LOVELY APARTMENT FOR RENT KINDLY CONTACT EMAIL</h2>
                 <div class="ad-details">70 m² • 1 quarto • 1 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 120</span>
+                    <span class="stat-saves">❤️ 0</span>
+                </div>
                 <div class="ad-contact">
                     <span class="seller-name">John Doe</span>
                     <button class="contact-btn">Contactar</button>
+                </div>
+            </div>
+        </article>
+
+        <!-- Anúncio CRÍTICO - Teste Keywords Burlão -->
+        <article class="ad-card" data-id="999">
+            <div class="ad-image">Foto T2 Espetacular</div>
+            <div class="ad-content">
+                <div class="ad-price suspicious-price">350 €/mês</div>
+                <h2 class="ad-title">T2 Centro Lisboa - Urgente</h2>
+                <!-- Keywords CRITICAS na descrição -->
+                <p class="ad-description">
+                    Excelente apartamento. Como não estou em Portugal e trabalho fora, 
+                    faço o envio a chave pelo correio após sinal. 
+                    Pagamento via Western Union para garantir reserva.
+                </p>
+                <div class="ad-details">90 m² • 2 quarto • 1 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 10</span>
+                    <span class="stat-saves">❤️ 0</span>
                 </div>
             </div>
         </article>
@@ -62,6 +94,10 @@
                 <div class="ad-price">320.000 €</div>
                 <h2 class="ad-title">Moradia T3 em zona calma com jardim e garagem</h2>
                 <div class="ad-details">150 m² • 3 quarto • 2 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 890</span>
+                    <span class="stat-saves">❤️ 32</span>
+                </div>
                 <div class="ad-contact">
                     <span class="seller-name">Ana Silva Mediação</span>
                     <button class="contact-btn">Contactar</button>
@@ -76,6 +112,10 @@
                 <div class="ad-price suspicious-price">45.000 €</div>
                 <h2 class="ad-title">Penthouse de luxo com vista mar T4 oportunidade única</h2>
                 <div class="ad-details">200 m² • 4 quarto • 3 wc</div>
+                <div class="ad-stats">
+                    <span class="stat-views">👁️ 5000</span>
+                    <span class="stat-saves">❤️ 2</span>
+                </div>
                 <div class="ad-contact">
                     <span class="seller-name">Particular (Urgente)</span>
                     <button class="contact-btn">Contactar</button>
