--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -89,6 +89,12 @@
         </ul>
     </div>
 
+    <div style="margin-top: 15px; border-top: 1px solid #eee; padding-top: 10px;">
+        <button id="reset-btn" style="background:#fff; color:#c0392b; border:1px solid #c0392b; padding:6px 10px; border-radius:4px; cursor:pointer; width:100%; font-size:11px; font-weight:bold; transition: background 0.2s;">
+            ♻️ Resetar Dados & Memória
+        </button>
+    </div>
+
     <footer>
         Versão 1.1 (Beta)
     </footer>
